--- a/NEO CANCoder Swerve/.pathplanner/settings.json
+++ b/NEO CANCoder Swerve/.pathplanner/settings.json
@@ -1,6 +1,6 @@
 {
   "robotWidth": 0.6858,
-  "robotLength": 0.69,
+  "robotLength": 0.6858,
   "holonomicMode": true,
   "pathFolders": [],
   "autoFolders": [],
@@ -8,6 +8,5 @@
   "defaultMaxAccel": 3.0,
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
-  "maxModuleSpeed": 4.5,
-  "choreoProjectPath": null
+  "maxModuleSpeed": 10.0
 }
