--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -10,6 +10,24 @@ plugins {
     id 'java-library'
 }
 
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/Team3229/Hawk-Libraries")
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("Xolverr")
+                password = project.findProperty("gpr.key") ?: System.getenv("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")
+            }
+        }
+    }
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
+        }
+    }
+}
+
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
