--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,10 +91,22 @@ jobs:
       - name: Combine
         # if: |
         #   !startsWith(github.ref, 'refs/tags/v')
-         run: ./gradlew publish
-      env:
-        USERNAME: ${{ github.actor }}
-        TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: ./gradlew publish
+        working-directory: combiner
+        env:
+          USERNAME: ${{ github.actor }}
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Combine (Release)
+      #   if: |
+      #     github.repository_owner == 'wpilibsuite' &&
+      #     startsWith(github.ref, 'refs/tags/v')
+      #   run: |
+      #     ./gradlew publish -Pthirdparty
+      #   working-directory: combiner
+      #   env:
+      #     RUN_AZURE_ARTIFACTORY_RELEASE: 'TRUE'
+      #     ARTIFACTORY_PUBLISH_USERNAME: ${{ secrets.ARTIFACTORY_USERNAME }}
+      #     ARTIFACTORY_PUBLISH_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
       - uses: actions/upload-artifact@v4
         with:
           name: Maven
