--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,1 @@
-pluginManagement {
-    repositories {
-        mavenLocal()
-        gradlePluginPortal()
-        maven { 
-        url "https://jitpack.io" 
-        content { includeGroup "com.github.team3229" }
-      }
-    }
-}
+rootProject.name = 'Hawk-Libraries'
