--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
   id 'edu.wpi.first.NativeUtils' version '2025.3.0'
   id 'edu.wpi.first.GradleJni' version '1.1.0'
   id 'edu.wpi.first.GradleVsCode' version '2.1.0'
+  id "edu.wpi.first.GradleRIO" version "2024.3.2"
 }
 
 repositories {
@@ -19,14 +20,14 @@ if (project.hasProperty('releaseMode')) {
 
 // Apply Java configuration
 dependencies {
-    implementation 'edu.wpi.first.cscore:cscore-java:2025.+'
-    implementation 'edu.wpi.first.cameraserver:cameraserver-java:2025.+'
-    implementation 'edu.wpi.first.ntcore:ntcore-java:2025.+'
-    implementation 'edu.wpi.first.wpilibj:wpilibj-java:2025.+'
-    implementation 'edu.wpi.first.wpiutil:wpiutil-java:2025.+'
-    implementation 'edu.wpi.first.wpimath:wpimath-java:2025.+'
-    implementation 'edu.wpi.first.wpiunits:wpiunits-java:2025.+'
-    implementation 'edu.wpi.first.hal:hal-java:2025.+'
+    implementation 'edu.wpi.first.cscore:cscore-java:2024.3.2'
+    implementation 'edu.wpi.first.cameraserver:cameraserver-java:2024.3.2'
+    implementation 'edu.wpi.first.ntcore:ntcore-java:2024.3.2'
+    implementation 'edu.wpi.first.wpilibj:wpilibj-java:2024.3.2'
+    implementation 'edu.wpi.first.wpiutil:wpiutil-java:2024.3.2'
+    implementation 'edu.wpi.first.wpimath:wpimath-java:2024.3.2'
+    implementation 'edu.wpi.first.wpiunits:wpiunits-java:2024.3.2'
+    implementation 'edu.wpi.first.hal:hal-java:2024.3.2'
     implementation "org.ejml:ejml-simple:0.43.1"
     implementation "com.fasterxml.jackson.core:jackson-annotations:2.15.2"
     implementation "com.fasterxml.jackson.core:jackson-core:2.15.2"
