--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,9 @@ publishing {
     publications {
         mavenJava(MavenPublication) {
             from components.java
+            groupId = 'com.github.team3229'
+            artifactId = 'hawk-libraries'
+            version = '0.0.1'
         }
     }
     repositories {
