--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,4 +96,4 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: Maven
-          path: build/repo
+          path: build/allOutputs
