--- a/publish.gradle
+++ b/publish.gradle
@@ -99,7 +99,7 @@ def releasesRepoUrl = "$buildDir/repos/releases"
 publishing {
     repositories {
         maven {
-            url = releasesRepoUrl
+            url = System.getenv("ORG_GRADLE_PROJECT_githubRepo")
         }
     }
 }
