--- a/publish.gradle
+++ b/publish.gradle
@@ -102,8 +102,8 @@ publishing {
             name = "GitHubPackages"
             url = uri("https://maven.pkg.github.com/team3229/Hawk-Libraries")
             credentials {
-                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
-                password = project.findProperty("gpr.token") ?: System.getenv("TOKEN")
+                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+                password = project.findProperty("gpr.token") ?: System.getenv("GITHUB_TOKEN")
             }
         }
     }
