--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Created by https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
 
-*.probe
+file-system.probe
 *.lock
 
 cache.properties
