--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "java-library"
     id 'maven-publish'
-    id "edu.wpi.first.GradleRIO" version "2024.3.2"
+    // id "edu.wpi.first.GradleRIO" version "2024.3.2"
 }
 
 java {
