--- a/build.gradle
+++ b/build.gradle
@@ -1,129 +1,63 @@
 plugins {
-    id "java-library"
-    id 'maven-publish'
-    id "edu.wpi.first.GradleRIO" version "2024.3.2"
+    id 'java-library'
+    id 'maven-publish' // Optional, for publishing the library
+    id 'edu.wpi.first.wpilib.repositories.WPILibRepositoriesPlugin' version '2020.2'
+}
+
+group = 'com.hawklibraries'
+version = '0.0.1'
+
+repositories {
+    mavenCentral()
+    maven { url 'https://frcmaven.wpi.edu/release/' }
+
+    maven { url 'https://maven.revrobotics.com/' }
+    maven { url 'https://maven.ctr-electronics.com/release/' }
+    maven { url 'https://dev.studica.com/maven/release/2024/' }
+    maven { url 'https://3015rangerrobotics.github.io/pathplannerlib/repo' }
+
+}
+
+dependencies {
+    api 'edu.wpi.first.wpilibj:wpilibj-java:2024.3.2' // If needed
+
+    api 'com.revrobotics.frc:REVLib-java:2024.2.4'
+    api 'com.ctre.phoenix6:wpiapi-java:24.3.0'
+    api 'com.kauailabs.navx.frc:navx-frc-java:2024.1.0'
+    api 'com.pathplanner.lib:PathplannerLib-java:2024.2.8'
+
+    // implementation 'org.apache.commons:commons-lang3:3.12.0' // Example
+    compileOnly 'org.projectlombok:lombok:1.18.36'
+	annotationProcessor 'org.projectlombok:lombok:1.18.36'
+	
+	testCompileOnly 'org.projectlombok:lombok:1.18.36'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
+
+    implementation 'edu.wpi.first.cscore:cscore-java:2024.3.2'
+    implementation 'edu.wpi.first.cameraserver:cameraserver-java:2024.3.2'
+    implementation 'edu.wpi.first.ntcore:ntcore-java:2024.3.2'
+    implementation 'edu.wpi.first.wpilibj:wpilibj-java:2024.3.2'
+    implementation 'edu.wpi.first.wpiutil:wpiutil-java:2024.3.2'
+    implementation 'edu.wpi.first.wpimath:wpimath-java:2024.3.2'
+    implementation 'edu.wpi.first.wpiunits:wpiunits-java:2024.3.2'
+    implementation 'edu.wpi.first.hal:hal-java:2024.3.2'
+    implementation "org.ejml:ejml-simple:0.43.1"
+    implementation "com.fasterxml.jackson.core:jackson-annotations:2.15.2"
+    implementation "com.fasterxml.jackson.core:jackson-core:2.15.2"
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.15.2"
+    implementation 'edu.wpi.first.thirdparty.frc2024.opencv:opencv-java:4.8.0-2'
+    implementation 'edu.wpi.first.wpilibNewCommands:wpilibNewCommands-java:2024.3.2'
+
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
-}
-
-def ROBOT_MAIN_CLASS = "frc.robot.Main"
-
-// Define my targets (RoboRIO) and artifacts (deployable files)
-// This is added by GradleRIO's backing project DeployUtils.
-deploy {
-    targets {
-        roborio(getTargetTypeClass('RoboRIO')) {
-            // Team number is loaded either from the .wpilib/wpilib_preferences.json
-            // or from command line. If not found an exception will be thrown.
-            // You can use getTeamOrDefault(team) instead of getTeamNumber if you
-            // want to store a team number in this file.
-            team = project.frc.getTeamNumber()
-            debug = project.frc.getDebugOrDefault(false)
-
-            artifacts {
-                // First part is artifact name, 2nd is artifact type
-                // getTargetTypeClass is a shortcut to get the class type using a string
-
-                frcJava(getArtifactTypeClass('FRCJavaArtifact')) {
-                }
-
-                // Static files artifact
-                frcStaticFileDeploy(getArtifactTypeClass('FileTreeArtifact')) {
-                    files = project.fileTree('src/main/deploy')
-                    directory = '/home/lvuser/deploy'
-                }
-            }
-        }
-    }
-}
-
-def deployArtifact = deploy.targets.roborio.artifacts.frcJava
-
-// Set to true to use debug for JNI.
-wpi.java.debugJni = false
-
-// Set this to true to enable desktop support.
-def includeDesktopSupport = false
-
-// Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
-// Also defines JUnit 5.
-dependencies {
-    implementation wpi.java.deps.wpilib()
-    implementation wpi.java.vendor.java()
-
-    roborioDebug wpi.java.deps.wpilibJniDebug(wpi.platforms.roborio)
-    roborioDebug wpi.java.vendor.jniDebug(wpi.platforms.roborio)
-
-    roborioRelease wpi.java.deps.wpilibJniRelease(wpi.platforms.roborio)
-    roborioRelease wpi.java.vendor.jniRelease(wpi.platforms.roborio)
-
-    nativeDebug wpi.java.deps.wpilibJniDebug(wpi.platforms.desktop)
-    nativeDebug wpi.java.vendor.jniDebug(wpi.platforms.desktop)
-    simulationDebug wpi.sim.enableDebug()
-
-    nativeRelease wpi.java.deps.wpilibJniRelease(wpi.platforms.desktop)
-    nativeRelease wpi.java.vendor.jniRelease(wpi.platforms.desktop)
-    simulationRelease wpi.sim.enableRelease()
-
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-    compileOnly 'org.projectlombok:lombok:1.18.34'
-	  annotationProcessor 'org.projectlombok:lombok:1.18.34'
-	
-	  testCompileOnly 'org.projectlombok:lombok:1.18.34'
-	  testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
-}
-
-test {
-    useJUnitPlatform()
-    systemProperty 'junit.jupiter.extensions.autodetection.enabled', 'true'
-}
-
-// Simulation configuration (e.g. environment variables).
-wpi.sim.addGui().defaultEnabled = true
-wpi.sim.addDriverstation()
-
-// Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
-// in order to make them all available at runtime. Also adding the manifest so WPILib
-// knows where to look for our Robot Class.
-jar {
-    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
-    from sourceSets.main.allSource
-    manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
-    duplicatesStrategy = DuplicatesStrategy.INCLUDE
-}
-
-tasks.register('sourcesJar', Jar) {
-    archiveClassifier.set('sources')
-    from sourceSets.main.allSource
-}
-
-// Configure jar and deploy tasks
-deployArtifact.jarTask = jar
-wpi.java.configureExecutableTasks(jar)
-wpi.java.configureTestTasks(test)
-
-// Configure string concat to always inline compile
-tasks.withType(JavaCompile) {
-    options.compilerArgs.add '-XDstringConcat=inline'
+    withSourcesJar()
 }
 
 publishing {
     publications {
         mavenJava(MavenPublication) {
             from components.java
-
-            groupId = 'frc.hawklibraries'
-            artifactId = 'hawklibraries'
-            version = '0.0.1'
-
-            // Add other artifacts like sources or javadocs if needed
-            artifact sourcesJar
-            // artifact javadocJar
         }
     }
     repositories {
