--- a/publish.gradle
+++ b/publish.gradle
@@ -136,9 +136,16 @@ libraryBuild.dependsOn build
 publishing {
     repositories {
         maven {
-
             url = releasesRepoUrl
         }
+        // maven {
+        //     name = "GitHubPackages"
+        //     url = uri("https://maven.pkg.github.com/Team3229/Hawk-Libraries")
+        //     credentials {
+        //         username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+        //         password = project.findProperty("gpr.token") ?: System.getenv("TOKEN")
+        //     }
+        // }
     }
 }
 
