--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI Release
 on:
   push:
     branches:
-      - develop
+      - main
 
 jobs:
   release:
@@ -29,20 +29,23 @@ jobs:
         run: ./gradlew publish
 
       - name: Create release
+        id: create_release
         uses: actions/create-release@v1
         with:
           tag_name: "v${{ env.version }}"
           release_name: "Release v${{ env.version }}"
           draft: false
           prerelease: false
-          generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Compress repos folder
+        run: zip -r repos.zip repos
 
       - name: Upload repos folder to release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./repos
-          asset_name: repos
+          asset_path: repos.zip
+          asset_name: repos.zip
           asset_content_type: application/zip
